--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.33.5",
+    "discord-interactions": "^3.2.0",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "next": "^12.1.6",
+    "raw-body": "^2.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
