--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "commands": "node src/deploy-commands.js",
     "start": "node src/index.js",
-    "newStart": "npm run commands && npm start"
+    "newStart": "npm run commands && npm start",
+    "nodemon": "node src/index.js"
   },
   "repository": {
     "type": "git",
