--- a/package.json
+++ b/package.json
@@ -21,13 +21,8 @@
   },
   "homepage": "https://github.com/srtager555/Rynyk#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/rest": "^0.5.0",
-    "discord-api-types": "^0.33.5",
-    "discord-interactions": "^3.2.0",
-    "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "discord.js": "^14.3.0",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
